fixed printing attempts

--- a/templates/attack_auth.html
+++ b/templates/attack_auth.html
@@ -25,13 +25,13 @@
                     </div>
 
                     <div class="attack-option" data-method="dictionary5">
-                        <strong>📚 Attaque par Dictionnaire (5 char)</strong>
+                        <strong>💥 Attaque par force brute (5 char)</strong>
                         <p>Teste les mots de passe de 5 caractères (ex: 12345, 98765)</p>
                         <small style="opacity: 0.7;">⚡ Modéré - Utilise 'worldlist5.txt'</small>
                     </div>
 
                     <div class="attack-option" data-method="bruteforce">
-                        <strong>💥 Attaque par force brute</strong>
+                        <strong>💥 Attaque par force brute (6 char)</strong>
                         <p>Teste toutes les combinaisons de 6 caractères (a-z, A-Z, 0-9, +, *)</p>
                         <small style="opacity: 0.7;">🐌 Lent</small>
                     </div>
